# OptCut

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test.html  tsconfig.json  update.json  vite.config.ts
setup/: 编译脚本OptCut.iss  编译脚本OptCut_2.iss
src/: App.vue  app.css  i18n.ts  main.ts
src-tauri/: Cargo.toml  Config.toml  tauri.conf.json
src-tauri/assets/: Config.json  Config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  font.rs  lib.rs  main.rs  migrations.rs
src-tauri/src/utils/: capture_screen.rs  color.rs  config.rs  img_util.rs  mod.rs  offline_ocr.rs  read_conf.rs  sql.rs  tencent_ocr.rs  translate.rs  tray.rs
src-tauri/tools/img/: 1.png-result.txt
src-tauri/words/: main.html  main.md
src/components/: Notification.vue  contextmenu.vue  translate-settings.vue
src/components/menu/: Ocr.vue  ShortcutKey.vue  System.vue  Test.vue  Translate.vue
src/locales/: en.json  zh-CN.json
src/router/: index.ts
src/stores/: index.ts  paintingStore.ts
src/types/: fabric-extensions.d.ts
src/utils/: CaptureScreenshotMain.ts  dbsql.ts  method.ts  ocr.ts  painting.ts  toast.ts  translate.ts
src/views/: PaintingToolbar.vue  contextmenu.vue  fixed.vue  home.vue  screenshot.vue  translate_interfaces.vue
src/windows/: CaptureScreenshotMain.ts  ShortcutRegistration.ts  create.js  create.ts  dbsql.ts  globalVariables.ts  method.ts  ocr.ts  painting.ts  screenshot.ts  text_ocr_create.ts  translate.ts  tray.ts
