[package]
name = "OptCut"
version = "0.1.0"
description = "zxl-optcut"
authors = ["zxl <<15072720273@aliyun.com>>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "OptCut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
non_snake_case = "allow"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
strip = true  # 自动从二进制文件去除符号信息.
panic = "abort"
codegen-units = 1
opt-level = "s"

[profile.dev]
opt-level = 1 # Prioritizes small binary size. Use `3` if you prefer speed.
#debug = true       # 保留调试信息

[dependencies]
tauri = { version = "2.0.3", features = ["tray-icon", "protocol-asset", "macos-private-api", "unstable", "image-png", "image-ico"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
dirs = "5.0.1"
xcap = "0.2.0"
lazy_static = "1.5.0"
mouse_position = "0.1.4"
tauri-plugin-fs = "2"
image = { version = "0.25.5" }
tauri-plugin-clipboard-manager = "2.0.2"
base64 = "0.22.1"

[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

