[package]
name = "OptCut"
version = "0.1.0"
description = "zxl-optcut"
authors = ["zxl <<15072720273@aliyun.com>>"]
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "OptCut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
non_snake_case = "allow"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[profile.release]
lto = true
strip = true  # 自动从二进制文件去除符号信息.
panic = "abort"
codegen-units = 3
opt-level = "s"

[profile.dev]
codegen-units = 16
opt-level = 0 # Prioritizes small binary size. Use `3` if you prefer speed.
#debug = true       # 保留调试信息

[dependencies]
tauri = { version = "2.2.3", features = ["tray-icon", "protocol-asset", "macos-private-api", "unstable", "image-png", "image-ico"] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tauri-plugin-dialog = "2.2.0"
dirs = "6.0.0"
xcap = "0.2.2"
#lazy_static = "1.5.0"
mouse_position = "0.1.4"
tauri-plugin-fs = "2.2.0"
image = { version = "0.25.5" }
tauri-plugin-clipboard-manager = "2.2.0"
base64 = "0.22.1"
tauri-plugin-positioner = { version = "2.2.0", features = ["tray-icon"] }
paddleocr = {version = "0.4.1", features = ["bytes"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls"] }
tokio = { version = "1.43.0", features = ["full"] }
reqwest = "0.12.12"
chrono = "0.4.39"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

