[package]
name = "OptCut"
version = "0.1.0"
description = "zxl-optcut"
authors = ["zxl <<15072720273@aliyun.com>>"]
edition = "2024"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "OptCut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[lints.rust]
non_snake_case = "allow"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[profile.release]
lto = true
debug = false
strip = true  # 自动从二进制文件去除符号信息.
panic = "abort"
codegen-units = 8
opt-level = "s"

[profile.dev]
codegen-units = 16
opt-level = 's' # Prioritizes small binary size. Use `3` if you prefer speed.
#debug = true       # 保留调试信息

[dependencies]
tauri = { version = "2.5.1", features = ["tray-icon", "protocol-asset", "macos-private-api", "unstable", "image-png", "image-ico"] }
tauri-plugin-shell = "2.2.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tauri-plugin-dialog = "2.2.0"
xcap = "0.6.0"
#lazy_static = "1.5.0"
mouse_position = "0.1.4"
tauri-plugin-fs = "2.2.0"
image = { version = "0.25.5" }
tauri-plugin-clipboard-manager = "2.2.0"
base64 = "0.22.1"
tauri-plugin-positioner = { version = "2.2.0", features = ["tray-icon"] }
#paddleocr = {version = "0.4.1", features = ["bytes"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls"] }
selection = "1.2.0"
reqwest = { version = "0.12.12", features = ["json"] }
chrono = "0.4.39"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
rand = "0.9.0"
md5 = "0.7.0"
font-kit = "0.14.2"
tauri-plugin-autostart = "2.3.0"
jieba-rs = "0.7"
[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.2.0"



[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

tauri-plugin-global-shortcut = "2"

